# kafka-python-messaging-engine

./: .env.example  .gitignore  README.md  docker-compose.yaml  intro_to_kafka.md  pyproject.toml  requirements.txt
data/: command-list.txt  redpanda-info.txt
src/: consumer_app.py  logger.py  main.py  producer_app.py  utils.py
src/kafka/: admin.py  avro_consumer.py  avro_producer.py  consumer.py  producer.py  schema_client_registry.py
src/schemas/: user.avsc  user.py
