[project]
name = "python-kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "Amirul Islam",email = "amirulislamalmamun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka (>=2.10.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
