[project]
name = "python-kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "Amirul Islam",email = "amirulislamalmamun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka (>=2.10.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "cachetools (>=6.0.0,<7.0.0)",
    "authlib (>=1.6.0,<2.0.0)",
    "fastavro (>=1.11.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
